--- a/index.html
+++ b/index.html
@@ -29,33 +29,58 @@
         <nav>
 
         </nav>
+        <!-- End of Navigation Bar -->
 
-        <!-- Heading/Banner -->
+        <!-- Heading/Banner (Section 1)-->
         <section id="head" class="container-fluid txt">
             <div class="row">
                 <div class="col p-4">Lebon Siu - Graphic Designer</div>
             </div>
             <div class="row">
                 <div class="col">
-                    <img src="img/Website-Hero.png" alt="Image of lebon siu with his name" class="head-img"
+                    <img src="img/Website-Hero.png" alt="Image of lebon siu with his name" class="img-fluid"
                         width="1050px">
                 </div>
             </div>
             <div class="row">
                 <div class="col">
-                    <img src="./img/Burrowing-Rabbit.png" alt="Rabbit looking in a hole" class="head-img" width="200px">
+                    <img src="./img/Burrowing-Rabbit.png" alt="Rabbit looking in a hole" class="img-fluid"
+                        width="200px">
                 </div>
             </div>
             <div class="row">
-                <a href="#">
-                    <div class="col-12">
+                <a href="#about">
+                    <div class="col">
                         <span class="txt-co">Enter the Rabbit Hole<br>↓</span>
                     </div>
                 </a>
             </div>
         </section>
+        <!-- End of Section 1 -->
 
-        <!-- About Section of Page -->
+        <!-- About Section of Page (Section 2)-->
+        <section class="about" id="about">
+            <div class="about-img">
+                <img src="img/Floating-Objects.png" class="img-fluid anime" width="400px">
+            </div>
+            <div class="about-dec">
+                <h2>Hi! My name is <span class="ab-color">Lebon Siu.</span><br>
+                    I'm a <span class="ab-color">graphic designer</span> based in <span class="ab-color">Vancouver.</span></h2>
+                <p>I design high-concept digital experiences for businesses, and bring a unique perspective to design
+                    through my background in film and video. I have had the privelage to work with clients such as
+                    Fairmont, BC Liquor, Vancouver is Awesome, and more.</p>
+                <p>Before I was a designer, I worked in music video production as a resident videographer and content
+                    creator. I've spent countless hours working with music video directors to help bring their stories
+                    to life, from designing their pitch decks, to filming on set, to editing their music videos.</p>
+                <p>Today, I bring my love of storytelling to design, and take influence in film, art, music and design.
+                    I believe in using the power of narrative to create emotional connections between business and
+                    consumer, and bring with me a multitude of technical skills that can elevate your projects above the
+                    rest.</p>
+            </div>
+        </section>
+        <!-- End of Section 2 -->
+
+        <hr class="dividor">
 
 
     </main>
