Updated Section 2 for responsive

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <!-- About Section of Page (Section 2)-->
         <section class="about" id="about">
             <div class="about-img">
-                <img src="img/Floating-Objects.png" class="img-fluid anime" width="450px">
+                <img src="img/Floating-Objects.png" class="img-fluid anime">
             </div>
             <div class="about-dec">
                 <h2>Hi! My name is <span class="ab-color">Lebon Siu.</span><br>
@@ -133,7 +133,7 @@
 
         <!-- Skills section of page (section 3) -->
         <section class="skill" id="skill">
-            <h3>Skills</h3>
+            <h3 class="fs">Skills</h3>
             <div class="s-block">
                 <div class="skill-block" onmouseover="change_img(1)" onmouseleave="ori(1)">
                     <img src="./img/CSS-Icon.jpg" class="skill-block-img img-fluid" id="skill-block-img1">
