--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             <h3 class="fs">Skills</h3>
             <div class="s-block">
                 <div class="skill-block" onmouseover="change_img(1)" onmouseleave="ori(1)">
-                    <img src="./img/CSS-Icon.jpg" class="skill-block-img img-fluid" id="skill-block-img1">
+                    <img src="./img/CSS-Icon.jpg" class="skill-block-img" id="skill-block-img1">
                     <div class="skill-block-decs">
                         <h3>HTML/CSS</h3>
                         <p>
